# kyan

./: .gitignore  README.md  config.py  config.yaml.example  kyan.py  pyproject.toml
kyan/: __init__.py  api_handler.py  backend.py  bencode.py  email.py  extensions.py  forms.py  models.py  search.py  template_utils.py  torrents.py  utils.py
kyan/static/: search.xml
kyan/static/css/: bootstrap-xl-mod.css  main.css
kyan/static/js/: bootstrap-select.js  main.js  main.min.js
kyan/templates/: 404.html  admin_bans.html  admin_trusted.html  admin_trusted_view.html  adminlog.html  edit.html  help.html  home.html  layout.html  login.html  password_reset.html  password_reset_request.html  profile.html  register.html  reports.html  rss.xml  rules.html  search_results.html  trusted.html  trusted_form.html  upload.html  user.html  user_comments.html  view.html  waiting.html  xmlns.html
kyan/templates/email/: reset-request.html  reset.html  reset.txt  trusted.html  trusted.txt  verify.html  verify.txt
kyan/views/: __init__.py  account.py  admin.py  main.py  site.py  torrents.py  users.py
torrents/: 1.Tokyo.Revengers.S03E01.The.Longest.Day.1080p.DSNP.WEB-DL.AAC2.0.H.264-NTb.mkv.torrent  2.Jujutsu.Kaisen.S02E08.Shibuya.Incident.1080p.AMZN.WEB-DL.DDP2.0.H.264-VARYG.mkv.torrent  3.kyan.png.torrent
